In the agenda view, when only one cell (=15 minutes) is selected, use the default duration for a new event instead. The old way was particularly confusing when you double-clicked into the agenda and a 15-minutes event was generated instead of a 2-hour one.

BUG:93064

svn path=/trunk/KDE/kdepim/; revision=438147